Dockers/java-compiler/compile_errors.log
Solution.java:4: error: missing return statement
    }
    ^
1 error
